Database Connect and Queens Problem

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,9 +27,11 @@ dist.dir=dist
 dist.jar=${dist.dir}/JavaCodecamp.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.ojdbc14.jar=C:\\oraclexe\\app\\oracle\\product\\10.2.0\\server\\jdbc\\lib\\ojdbc14.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.ojdbc14.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
