--- a/banking/nbproject/project.properties
+++ b/banking/nbproject/project.properties
@@ -24,11 +24,10 @@ debug.test.classpath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/JavaCodecamp.jar
+dist.jar=${dist.dir}/banking.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
-file.reference.=C:\\
-file.reference.ojdbc14.jar=C:\\oraclexe\\app\\oracle\\product\\10.2.0\\server\\jdbc\\lib\\ojdbc14.jar
+file.reference.ojdbc14.jar=lib\\ojdbc14.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -57,7 +56,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=javacodecamp.JavaCodecamp
+main.class=banking.Banking
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
