--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
 /build/
 /banking/nbproject/private/
 /banking/build/
+/sampleserver/nbproject/private/
+/sampleserver/build/
+/WebApplication1/nbproject/private/
+/WebApplication1/build/
+/test/nbproject/private/
+/test/build/
+/rbi/nbproject/private/
+/rbi/build/
+/rbi/dist/
+/sudoku/nbproject/private/
