--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,8 +27,8 @@ dist.dir=dist
 dist.jar=${dist.dir}/JavaCodecamp.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
-file.reference.=C:\\
-file.reference.ojdbc14.jar=C:\\oraclexe\\app\\oracle\\product\\10.2.0\\server\\jdbc\\lib\\ojdbc14.jar
+file.reference.=..
+file.reference.ojdbc14.jar=C:\\ojdbc14.jar
 includes=**
 jar.compress=false
 javac.classpath=\
